[package]
name = "andes"
version = "0.1.1"
edition = "2021"
description = "An interface for Ollama in Rust"
license = "MIT"
repository = "https://github.com/richardanaya/Andes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ version= "4.5.4", features = ["derive"] }
once_cell = "1.19.0"
reqwest = {version="0.12.4", features=["blocking"]}
serde = {version="1.0.201", features=["derive"]}
serde_json = "1.0.117"


[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "cdb18e610a72b4a025d7e1890140393adee5b087"